Styling for character top row content

--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -15,6 +15,8 @@
     flex: 0 0 100px;
     height: 100px;
     margin-right: 10px;
+	object-fit: cover;
+	object-position: 50% 0%;
   }
 
   .header-fields {
